@@ -5,15 +5,7 @@
     <div class="page-wrapper">
         <div class="content container-fluid">
 
-            <div class="pull-right p-2 mb-3">
-                <a class="btn bg-gray-500 hover:bg-gray-600 text-white hover:font-semibold 
-                    transition ease-in-out delay-30 
-                    hover:-translate-y-1 duration-300 
-                    rounded-full shadow-md" 
-                    href="{{ URL::previous() }}">
-                < Back</a>
-            </div>
-
+            @include('partials.buttons.back')
 
             <div class="row">
                 <div class="col-md-12">
@@ -22,48 +14,44 @@
 
                         <div class="card-body">
 
-                            @if (count($errors) > 0)
-                              <div class="alert alert-danger">
-                                <strong>Whoops!</strong> There were some problems with your input.<br><br>
-                                <ul>
-                                   @foreach ($errors->all() as $error)
-                                     <li>{{ $error }}</li>
-                                   @endforeach
-                                </ul>
-                              </div>
+                            @if(session('errors'))
+                                @include('partials.messages.error')
                             @endif
-
 
                             {!! Form::model($user, ['method' => 'PATCH','route' => ['profiles.update', $user->id]]) !!}
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <div class="form-group">
                                         <strong>Name:</strong>
-                                        {!! Form::text('name', null, array('placeholder' => 'Name','class' => 'form-control')) !!}
+                                        {!! Form::text('name', null, array('placeholder' => 'Name','class' => 'block w-full mt-1 rounded-md')) !!}
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <div class="form-group">
                                         <strong>Email:</strong>
-                                        {!! Form::text('email', null, array('placeholder' => 'Email','class' => 'form-control')) !!}
+                                        {!! Form::text('email', null, array('placeholder' => 'Email','class' => 'block w-full mt-1 rounded-md')) !!}
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <div class="form-group">
                                         <strong>Password:</strong>
-                                        {!! Form::password('password', array('placeholder' => 'Password','class' => 'form-control')) !!}
+                                        {!! Form::password('password', array('placeholder' => 'Password','class' => 'block w-full mt-1 rounded-md')) !!}
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <div class="form-group">
                                         <strong>Confirm Password:</strong>
-                                        {!! Form::password('confirm-password', array('placeholder' => 'Confirm Password','class' => 'form-control')) !!}
+                                        {!! Form::password('password_confirmation', array('placeholder' => 'Confirm Password','class' => 'block w-full mt-1 rounded-md')) !!}
                                     </div>
                                 </div>
 
-                                <div class="col-xs-12 col-sm-12 col-md-12 text-center p-4">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                </div>
+                                <button type="submit" class="btn text-white bg-blue-500 hover:font-semibold hover:bg-blue-600
+                                    transition ease-in-out delay-30 
+                                    hover:-translate-y-1 duration-300 
+                                    rounded-full shadow-md
+                                    mt-3"
+                                >
+                                Submit</button>
                             </div>
                             {!! Form::close() !!}
                         </div>
